[deaton/trenchripper] quick push

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-06-25_exploring_RNAseq/Untitled.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-06-25_exploring_RNAseq/Untitled.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from sklearn.cluster import KMeans\n",
     "from matplotlib import pyplot as plt"
    ]
   },
@@ -98,6 +99,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "mrna_dset[\"ECB_01243\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "mrna_dset"
    ]
   },
@@ -142,6 +152,24 @@
     "time_vectors = mean_gene_group.apply(lambda x: np.array(x[0]))\n",
     "time_vectors = np.array([item.tolist() for item in time_vectors.values])\n",
     "time_vectors = time_vectors[:, :-2]  # early stationary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(mean_gene.loc[\"ECB_01243\"].values[:-2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_vectors"
    ]
   },
   {
@@ -197,20 +225,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### from sklearn.cluster import KMeans"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = max_norm_time_vectors\n",
-    "kmeans = KMeans(n_clusters=10, random_state=0).fit(X)"
+    "kmeans = KMeans(n_clusters=20, random_state=0).fit(X)"
    ]
   },
   {
@@ -228,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "centers"
+    "centers.shape"
    ]
   },
   {
@@ -237,7 +258,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster_0_idx = np.where(kmeans.labels_ == 0)[0]"
+    "for i in range(0, 5):\n",
+    "    plt.plot(centers[i], label=i)\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
@@ -246,7 +270,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster_0 = X[kmeans.labels_ == 0]"
+    "for i in range(5, 10):\n",
+    "    plt.plot(centers[i], label=i)\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
@@ -255,7 +282,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "((cluster_0 - centers[0]) ** 2).shape"
+    "for i in range(10, 15):\n",
+    "    plt.plot(centers[i], label=i)\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
@@ -264,7 +294,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "center_dist = np.sum((cluster_0 - centers[0]) ** 2, axis=1) ** (1 / 2)"
+    "for i in range(15, 20):\n",
+    "    plt.plot(centers[i], label=i)\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster_0_idx = np.where(kmeans.labels_ == 15)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster_0 = X[kmeans.labels_ == 15]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "((cluster_0 - centers[15]) ** 2).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "center_dist = np.sum((cluster_0 - centers[15]) ** 2, axis=1) ** (1 / 2)"
    ]
   },
   {
@@ -301,7 +370,8 @@
    "outputs": [],
    "source": [
     "for i in range(cluster_0_similar.shape[0]):\n",
-    "    plt.plot([5, 7, 8, 10, 14, 24, 48], cluster_0_similar[i])\n",
+    "    plt.plot([5, 7, 8, 10, 14, 24, 48], cluster_0_similar[i], label=i)\n",
+    "plt.legend()\n",
     "plt.show()"
    ]
   },
@@ -643,7 +713,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.11"
   }
  },
  "nbformat": 4,
