[deaton] Additional development of TrenchRipper for the analysis of lDE20 and CRISPRi libraries generally. Also a large number of notebooks expanding on lDE20 specific analysis.

--- a/paulssonlab/src/paulssonlab/deaton/marlin_libraries/notebooks/2021-04-08_Genome-wide_KO/2021-04-20_Essential_KO_Lib.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/marlin_libraries/notebooks/2021-04-08_Genome-wide_KO/2021-04-20_Essential_KO_Lib.ipynb
@@ -26,6 +26,7 @@
     "\n",
     "from sklearn.metrics import precision_recall_curve, roc_curve\n",
     "\n",
+    "\n",
     "from matplotlib import pyplot as plt"
    ]
   },
@@ -491,15 +492,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "thr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "thr = np.min(-thresholds[recall[1:] > 0.8])\n",
     "\n",
     "EcoWG1_essential_list = EcoWG1_gene_groupby[EcoWG1_gene_groupby < thr].index.to_list()\n",
@@ -747,18 +739,105 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Correction (8/26/2021)\n",
+    "\n",
+    "In the original design, the coordinates were misassigned. Here I open and repair the file, to preserve the randomly selected sequences."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import ast"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genome = SeqIO.read(\"./U00096_3.gb\", \"gb\")\n",
+    "reference = str(genome.seq)\n",
+    "ref_len = len(reference)\n",
+    "old_df = pd.read_csv(\"./2021-04-20_Essential_KO_Lib_df_original.tsv\", sep=\"\\t\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def find_loc(search_str,strand,reference=str(genome.seq)):\n",
+    "#     ref_len = len(reference)\n",
+    "#     comp_search_str = str(Seq(search_str).reverse_complement())\n",
+    "#     search = re.finditer(search_str,reference)\n",
+    "#     comp_search = re.finditer(comp_search_str,reference)\n",
+    "#     start_end_list = []\n",
+    "#     for item in search:\n",
+    "#         start_end_list.append((item.start(), item.end(), \"+\"))\n",
+    "#     for item in comp_search:\n",
+    "#         start_end_list.append((ref_len - item.end(), ref_len - item.start(), \"-\"))\n",
+    "#     return start_end_list\n",
+    "\n",
+    "#     for item in search:\n",
+    "#         start_end_list.append((item.start()+1,item.end(),\"+\"))\n",
+    "#     for item in comp_search:\n",
+    "#         start_end_list.append((item.start()+1,item.end(),\"-\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "old_df[\"Target Sites\"][~old_df[\"Target Sites\"].isna()] = old_df[\"Target Sites\"][\n",
+    "    ~old_df[\"Target Sites\"].isna()\n",
+    "].apply(lambda x: ast.literal_eval(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "old_df[\"Target Sites\"][~old_df[\"Target Sites\"].isna()] = old_df[\"Target Sites\"][\n",
+    "    ~old_df[\"Target Sites\"].isna()\n",
+    "].apply(\n",
+    "    lambda x: [\n",
+    "        (target_site[0] + 1, target_site[1], target_site[2])\n",
+    "        if target_site[2] == \"+\"\n",
+    "        else (ref_len - target_site[1] + 1, ref_len - target_site[0], target_site[2])\n",
+    "        for target_site in x\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "old_df.sample(n=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "old_df.to_csv(\"./2021-04-20_Essential_KO_Lib_df_coords_corrected.tsv\", sep=\"\\t\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -907,42 +986,57 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_df = pd.read_csv(\"./2021-04-20_Essential_KO_Lib_df.tsv\", sep=\"\\t\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "old_df = pd.read_csv(\"./2021-04-20_Essential_KO_Lib_df_old.tsv\", sep=\"\\t\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_df"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_seqs = list(\n",
+    "    set(new_df[\"Sequence To Order\"].tolist())\n",
+    "    - set(old_df[\"Sequence To Order\"].tolist())\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "len(new_seqs)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import ast"
+   ]
   },
   {
    "cell_type": "code",
@@ -1651,7 +1745,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
