--- a/paulssonlab/src/paulssonlab/deaton/marlin_libraries/notebooks/2021-04-08_Genome-wide_KO/2021-04-20_Essential_KO_Lib.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/marlin_libraries/notebooks/2021-04-08_Genome-wide_KO/2021-04-20_Essential_KO_Lib.ipynb
@@ -765,7 +765,10 @@
     "genome = SeqIO.read(\"./U00096_3.gb\", \"gb\")\n",
     "reference = str(genome.seq)\n",
     "ref_len = len(reference)\n",
-    "old_df = pd.read_csv(\"./2021-04-20_Essential_KO_Lib_df_original.tsv\", sep=\"\\t\")"
+    "old_df = pd.read_csv(\n",
+    "    \"./2021-04-20_Essential_KO_Lib_df_original.tsv\", sep=\"\\t\", usecols=range(1, 15)\n",
+    ")\n",
+    "old_df.insert(0, \"oDEPool7_id\", old_df.index)"
    ]
   },
   {
@@ -774,22 +777,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def find_loc(search_str,strand,reference=str(genome.seq)):\n",
-    "#     ref_len = len(reference)\n",
-    "#     comp_search_str = str(Seq(search_str).reverse_complement())\n",
-    "#     search = re.finditer(search_str,reference)\n",
-    "#     comp_search = re.finditer(comp_search_str,reference)\n",
-    "#     start_end_list = []\n",
-    "#     for item in search:\n",
-    "#         start_end_list.append((item.start(), item.end(), \"+\"))\n",
-    "#     for item in comp_search:\n",
-    "#         start_end_list.append((ref_len - item.end(), ref_len - item.start(), \"-\"))\n",
-    "#     return start_end_list\n",
-    "\n",
-    "#     for item in search:\n",
-    "#         start_end_list.append((item.start()+1,item.end(),\"+\"))\n",
-    "#     for item in comp_search:\n",
-    "#         start_end_list.append((item.start()+1,item.end(),\"-\"))"
+    "old_df"
    ]
   },
   {
@@ -838,13 +826,6 @@
    "source": [
     "old_df.to_csv(\"./2021-04-20_Essential_KO_Lib_df_coords_corrected.tsv\", sep=\"\\t\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
