--- a/paulssonlab/src/paulssonlab/deaton/marlin_libraries/notebooks/2021-04-08_Genome-wide_KO/2021-04-20_Essential_KO_Lib.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/marlin_libraries/notebooks/2021-04-08_Genome-wide_KO/2021-04-20_Essential_KO_Lib.ipynb
@@ -52,7 +52,7 @@
     "    else:\n",
     "        seq = str(seqrecord.seq.reverse_complement())\n",
     "\n",
-    "    pam_reg = re.compile(\"CC\")\n",
+    "    pam_reg = re.compile(\"(?=(CC))\")  ## corrected to get overlapping PAMs as well\n",
     "    pam_starts = [item.start(0) for item in re.finditer(pam_reg, str(seq))]\n",
     "\n",
     "    pam_list = []\n",
@@ -1164,7 +1164,7 @@
     "    else:\n",
     "        seq = str(seqrecord.seq.reverse_complement())\n",
     "\n",
-    "    pam_reg = re.compile(\"CC\")\n",
+    "    pam_reg = re.compile(\"(?=(CC))\")\n",
     "    pam_starts = [item.start(0) for item in re.finditer(pam_reg, str(seq))]\n",
     "\n",
     "    pam_list = []\n",
