--- a/paulssonlab/src/paulssonlab/shenker/cloning/220330 Genome extraction.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220330 Genome extraction.ipynb
@@ -6,26 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import holoviews as hv\n",
-    "import hvplot.pandas\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
+    "import random\n",
     "import toml\n",
-    "import re\n",
-    "from zipfile import ZipFile\n",
-    "import urllib\n",
-    "from datetime import datetime\n",
-    "import string\n",
     "import pygsheets\n",
-    "import requests\n",
     "from tqdm.auto import tqdm\n",
     "import Bio.Restriction as Restriction\n",
     "from Bio.Seq import Seq\n",
     "from Bio.SeqRecord import SeqRecord\n",
-    "import Bio.Entrez as Entrez\n",
-    "import benchlingapi"
+    "from itertools import product"
    ]
   },
   {
@@ -45,16 +33,23 @@
    "outputs": [],
    "source": [
     "import paulssonlab.api as api\n",
-    "import paulssonlab.api.benchling as bapi\n",
     "from paulssonlab.api.util import base_url\n",
     "import paulssonlab.cloning.registry as registry\n",
     "import paulssonlab.cloning.workflow as workflow\n",
     "import paulssonlab.cloning.sequence as sequence\n",
     "import paulssonlab.cloning.enzyme as enzyme\n",
-    "import paulssonlab.cloning.viennarna as viennarna\n",
-    "import paulssonlab.cloning.thermodynamics as thermodynamics\n",
+    "import paulssonlab.cloning.design as design\n",
     "import paulssonlab.cloning.primers as primers\n",
-    "import paulssonlab.cloning.ncbi as ncbi"
+    "import paulssonlab.api.geneious as geneious"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Setup"
    ]
   },
   {
@@ -63,14 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hv.extension(\"bokeh\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Setup"
+    "random.seed(75)"
    ]
   },
   {
@@ -97,8 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bench_session = benchlingapi.Session(config[\"benchling\"][\"api_key\"])\n",
-    "benchling_folder = bapi.get_project_root(bench_session, config[\"benchling\"][\"project\"])"
+    "geneious_sessionmaker = geneious.connect(**config[\"geneious\"])"
    ]
   },
   {
@@ -107,7 +94,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg = registry.Registry(gc, config[\"registry\"][\"folder\"], benchling_folder)"
+    "reg = registry.Registry(\n",
+    "    gc,\n",
+    "    config[\"registry\"][\"folder\"],\n",
+    "    geneious_sessionmaker=geneious_sessionmaker,\n",
+    "    geneious_folder=\"registry\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "olib_oligos = reg[(\"oLIB\", \"oligos\")]\n",
+    "plib_plasmids = reg[(\"pLIB\", \"plasmids\")]\n",
+    "plib_maps = reg[(\"pLIB\", \"maps\")]\n",
+    "flib_fragments = reg[(\"fLIB\", \"fragments\")]\n",
+    "part_types = reg[(\"fLIB\", \"fragments\", \"Part types\")]"
    ]
   },
   {
@@ -123,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# (\"Escherichia coli\"[Organism] AND sigma70[All Fields]) AND \"Escherichia coli str. K-12 substr. MG1655\"[porgn] AND alive[prop]"
+    "# dnaK, dnaKp1, dnaKp2, dnaKp3, ldhA, ibpA"
    ]
   },
   {
@@ -132,8 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sigb[Gene/Protein Name] AND \"Bacillus subtilis subsp. subtilis str. 168\"[Organism] AND alive[prop]\n",
-    "# sigb[Gene/Protein Name] AND \"Bacillus subtilis subsp. subtilis str. 168\"[Organism] AND \"srcdb refseq\"[Properties] AND alive[prop]"
+    "#(\"Escherichia coli\"[Organism] AND sigma70[All Fields]) AND \"Escherichia coli str. K-12 substr. MG1655\"[porgn] AND alive[prop]"
    ]
   },
   {
@@ -142,10 +155,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "organisms = {\n",
-    "    \"ecoli\": \"Escherichia coli str. K-12 substr. MG1655\",\n",
-    "    \"bsubtilis\": \"Bacillus subtilis subsp. subtilis str. 168\",\n",
-    "}"
+    "#sigb[Gene/Protein Name] AND \"Bacillus subtilis subsp. subtilis str. 168\"[Organism] AND alive[prop]\n",
+    "#sigb[Gene/Protein Name] AND \"Bacillus subtilis subsp. subtilis str. 168\"[Organism] AND \"srcdb refseq\"[Properties] AND alive[prop]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "organisms = {\"ecoli\": \"Escherichia coli str. K-12 substr. MG1655\", \"bsubtilis\": \"Bacillus subtilis subsp. subtilis str. 168\"}"
    ]
   },
   {
@@ -190,10 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Entrez.esearch(\n",
-    "    \"gene\",\n",
-    "    'sigb[Gene/Protein Name] AND \"bacillus subtilis 168\"[Organism] AND \"srcdb refseq\"[Properties] AND alive[prop]',\n",
-    ").read()"
+    "Entrez.esearch(\"gene\", 'sigb[Gene/Protein Name] AND \"bacillus subtilis 168\"[Organism] AND \"srcdb refseq\"[Properties] AND alive[prop]').read()"
    ]
   },
   {
@@ -202,10 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Entrez.esearch(\n",
-    "    \"gene\",\n",
-    "    'sigb[Gene/Protein Name] AND \"Bacillus subtilis subsp. subtilis str. 168\"[Organism] AND \"srcdb refseq\"[Properties] AND alive[prop]',\n",
-    ").read()"
+    "Entrez.esearch(\"gene\", 'sigb[Gene/Protein Name] AND \"Bacillus subtilis subsp. subtilis str. 168\"[Organism] AND \"srcdb refseq\"[Properties] AND alive[prop]').read()"
    ]
   },
   {
@@ -232,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# doc['Entrezgene_comments']"
+    "#doc['Entrezgene_comments']"
    ]
   },
   {
@@ -241,9 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc[\"Entrezgene_locus\"][1][\"Gene-commentary_products\"][0][\n",
-    "    \"Gene-commentary_genomic-coords\"\n",
-    "]"
+    "doc[\"Entrezgene_locus\"][1][\"Gene-commentary_products\"][0]['Gene-commentary_genomic-coords']"
    ]
   },
   {
@@ -261,9 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Entrez.efetch(\n",
-    "    db=\"nuccore\", id=\"255767013\", rettype=\"fasta\", **{\"from\": \"522862\", \"to\": \"523650\"}\n",
-    ").read()"
+    "Entrez.efetch(db=\"nuccore\", id=\"255767013\", rettype=\"fasta\", **{\"from\": \"522862\", \"to\": \"523650\"}).read()"
    ]
   },
   {
@@ -415,7 +425,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
