Rewrote api.ncbi to use requests+lxml instead of Bio.Entrez. Getting CDS sequences works.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220728 Genome extraction.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220728 Genome extraction.ipynb
@@ -3,17 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "import random\n",
     "import toml\n",
     "import pygsheets\n",
     "from tqdm.auto import tqdm\n",
     "import Bio.Restriction as Restriction\n",
     "from Bio.Seq import Seq\n",
-    "from Bio.SeqRecord import SeqRecord\n",
-    "from itertools import product"
+    "from Bio.SeqRecord import SeqRecord"
    ]
   },
   {
@@ -32,15 +32,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import paulssonlab.api as api\n",
-    "from paulssonlab.api.util import base_url\n",
+    "import paulssonlab.api.ncbi as ncbi\n",
+    "import paulssonlab.api.geneious as geneious\n",
     "import paulssonlab.cloning.registry as registry\n",
     "import paulssonlab.cloning.workflow as workflow\n",
     "import paulssonlab.cloning.sequence as sequence\n",
     "import paulssonlab.cloning.enzyme as enzyme\n",
     "import paulssonlab.cloning.design as design\n",
-    "import paulssonlab.cloning.primers as primers\n",
-    "import paulssonlab.api.geneious as geneious"
+    "import paulssonlab.cloning.primers as primers"
    ]
   },
   {
@@ -50,15 +49,6 @@
    },
    "source": [
     "# Setup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "random.seed(75)"
    ]
   },
   {
@@ -104,9 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "# Config"
    ]
@@ -146,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#(\"Escherichia coli\"[Organism] AND sigma70[All Fields]) AND \"Escherichia coli str. K-12 substr. MG1655\"[porgn] AND alive[prop]"
+    "# Hfq, PepP, IbpA, FruK and MviM"
    ]
   },
   {
@@ -155,8 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#sigb[Gene/Protein Name] AND \"Bacillus subtilis subsp. subtilis str. 168\"[Organism] AND alive[prop]\n",
-    "#sigb[Gene/Protein Name] AND \"Bacillus subtilis subsp. subtilis str. 168\"[Organism] AND \"srcdb refseq\"[Properties] AND alive[prop]"
+    "s = ncbi.get_gene(\"heat-shock\", \"ecoli\")"
    ]
   },
   {
@@ -165,8 +152,187 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "organisms = {\"ecoli\": \"Escherichia coli str. K-12 substr. MG1655\", \"bsubtilis\": \"Bacillus subtilis subsp. subtilis str. 168\"}"
+    "ss.findtext(\"Entrezgene_locus/Gene-commentary/Gene-commentary_label\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ss = ncbi.get_gene_seq(\"sigb\", \"bsubtilis\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(ss.seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ss.findall(\"Entrezgene_locus\")[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = ncbi.get_gene_seq(\"IbpA\", \"ecoli\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s.find(\"Entrezgene_locus\").getchildren()[0].getchildren()#find(\"Gene-commentary_label\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = ncbi.get(\"efetch\", id=\"948200,948201\", db=\"gene\")\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = ncbi.get(\"esummary\", id=\"948200\", db=\"gene\")\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = ncbi.get_gene(\"IbpA\", \"ecoli\", one=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"IbpA\"\n",
+    "organism = ncbi.ORGANISMS[\"ecoli\"]\n",
+    "\n",
+    "res = ncbi.get(\n",
+    "    \"esearch\",\n",
+    "    db=\"gene\",\n",
+    "    term=f'{ncbi.escape(name)}[Gene/Protein Name] AND \"{ncbi.escape(organism)}\"[Organism] AND \"srcdb refseq\"[Properties] AND alive[prop]',\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xmltodict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xmltodict.parse(res.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Old"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# (\"Escherichia coli\"[Organism] AND sigma70[All Fields]) AND \"Escherichia coli str. K-12 substr. MG1655\"[porgn] AND alive[prop]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sigb[Gene/Protein Name] AND \"Bacillus subtilis subsp. subtilis str. 168\"[Organism] AND alive[prop]\n",
+    "# sigb[Gene/Protein Name] AND \"Bacillus subtilis subsp. subtilis str. 168\"[Organism] AND \"srcdb refseq\"[Properties] AND alive[prop]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -210,7 +376,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Entrez.esearch(\"gene\", 'sigb[Gene/Protein Name] AND \"bacillus subtilis 168\"[Organism] AND \"srcdb refseq\"[Properties] AND alive[prop]').read()"
+    "Entrez.esearch(\n",
+    "    \"gene\",\n",
+    "    'sigb[Gene/Protein Name] AND \"bacillus subtilis 168\"[Organism] AND \"srcdb refseq\"[Properties] AND alive[prop]',\n",
+    ").read()"
    ]
   },
   {
@@ -219,7 +388,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Entrez.esearch(\"gene\", 'sigb[Gene/Protein Name] AND \"Bacillus subtilis subsp. subtilis str. 168\"[Organism] AND \"srcdb refseq\"[Properties] AND alive[prop]').read()"
+    "Entrez.esearch(\n",
+    "    \"gene\",\n",
+    "    'sigb[Gene/Protein Name] AND \"Bacillus subtilis subsp. subtilis str. 168\"[Organism] AND \"srcdb refseq\"[Properties] AND alive[prop]',\n",
+    ").read()"
    ]
   },
   {
@@ -246,7 +418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#doc['Entrezgene_comments']"
+    "# doc['Entrezgene_comments']"
    ]
   },
   {
@@ -255,7 +427,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc[\"Entrezgene_locus\"][1][\"Gene-commentary_products\"][0]['Gene-commentary_genomic-coords']"
+    "doc[\"Entrezgene_locus\"][1][\"Gene-commentary_products\"][0][\n",
+    "    \"Gene-commentary_genomic-coords\"\n",
+    "]"
    ]
   },
   {
@@ -273,7 +447,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Entrez.efetch(db=\"nuccore\", id=\"255767013\", rettype=\"fasta\", **{\"from\": \"522862\", \"to\": \"523650\"}).read()"
+    "Entrez.efetch(\n",
+    "    db=\"nuccore\", id=\"255767013\", rettype=\"fasta\", **{\"from\": \"522862\", \"to\": \"523650\"}\n",
+    ").read()"
    ]
   },
   {
@@ -439,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
